@@ -9,6 +9,7 @@ import org.gradle.api.file.Directory;
 import org.gradle.api.provider.Provider;
 import org.gradle.api.tasks.TaskProvider;
 import wtf.emulator.DevelocityReporter;
+import wtf.emulator.EwDeviceSpec;
 import wtf.emulator.EwExecSummaryTask;
 import wtf.emulator.EwExecTask;
 import wtf.emulator.EwExtension;
@@ -21,6 +22,8 @@ import wtf.emulator.attributes.EwArtifactType;
 
 import java.io.File;
 import java.nio.file.Path;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Locale;
@@ -29,6 +32,7 @@ import java.util.Objects;
 import java.util.Set;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 public class TaskConfigurator {
   private final Project target;
@@ -175,11 +179,12 @@ public class TaskConfigurator {
 
     task.getRecordVideo().set(ext.getRecordVideo());
 
-    task.getDevices().set(ext.getDevices().map(devices -> devices.stream().map((config) -> {
-      final Map<String, String> out = new HashMap<>();
-      config.forEach((key, value) -> out.put(key, Objects.toString(value)));
-      return out;
-    }).collect(Collectors.toList())));
+    var devices = ext.getDevices().stream().map(dev -> ProviderUtils.deviceToCliMap(target.getProviders(), dev)).toList();
+    task.getDevices().set(ProviderUtils.reduce(
+      target.provider(Collections::emptyList),
+      devices,
+      (acc, device) -> Stream.concat(acc.stream(), Stream.of(device)).toList()
+    ));
 
     task.getUseOrchestrator().set(ext.getUseOrchestrator().orElse(target.provider(() ->
         android.getTestOptions().getExecution().equalsIgnoreCase("ANDROIDX_TEST_ORCHESTRATOR"))));
